[project]
name = "py2c"
description = "Python into C translator"
version = "0.1.1"
authors = [
    { name = "Polyakov Konstantin", email = "shyzik93@mail.ru" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = [
]

[project.scripts]
py2c = "py2c.cli:run"

[build-system]
requires = ["setuptools", "wheel"]