[project]
name = "py2c"
description = "Python into C translator"
readme = { file = "README.md", content-type = "text/markdown" }
version = "0.1.1"
authors = [
    { name = "Polyakov Konstantin", email = "shyzik93@mail.ru" }
]
license = { file = "LICENSE.txt" }
maintainers = [
   { name = "Polyakov Konstantin", email = "shyzik93@mail.ru" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = [
]

[project.scripts]
py2c = "py2c.cli:run"

[build-system]
requires = ["setuptools", "wheel"]